feat: add first use case
