# docs/swagger.json
@@ -7,9 +7,8 @@
     },
     "basePath": "/",
     "paths": {
-        "/user/me": {
-            "get": {
-                "description": "Return current logged in user information",
+        "/user/register": {
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
@@ -17,14 +16,25 @@
                     "application/json"
                 ],
                 "tags": [
-                    "profile"
+                    "user"
                 ],
-                "summary": "Get current user information",
+                "summary": "Register new user",
+                "parameters": [
+                    {
+                        "description": "Register payload",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.RegisterCommand"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/usecases.GetUserByAccountIDResponse"
+                            "$ref": "#/definitions/user.RegisterResponse"
                         }
                     }
                 }
@@ -32,26 +42,31 @@
         }
     },
     "definitions": {
-        "types.DateTime": {
-            "type": "object"
-        },
-        "usecases.GetUserByAccountIDResponse": {
+        "user.RegisterCommand": {
             "type": "object",
             "properties": {
-                "accountId": {
+                "bio": {
                     "type": "string"
                 },
-                "createdAt": {
-                    "$ref": "#/definitions/types.DateTime"
+                "email": {
+                    "type": "string"
                 },
                 "fullName": {
                     "type": "string"
                 },
-                "id": {
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.RegisterResponse": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
                     "type": "string"
                 },
-                "updatedAt": {
-                    "$ref": "#/definitions/types.DateTime"
+                "refreshToken": {
+                    "type": "string"
                 }
             }
         }
